--- a/views/index.html
+++ b/views/index.html
@@ -1,80 +1,103 @@
-﻿<!DOCTYPE html>
+﻿<!doctype html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="css/gunks.css">
-        <title>Surv-YAY Homepage</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <!--HEADER-->
-        <div class="header">
-            <a href="index">
-                <img src="images/SurvyaySmallLogo.jpg" alt="SurvYay">
-            </a>
-            <h2>Welcome, User!</h2>
-            <button type="button" onclick=logout()>Logout</button> <!--TODO: Add functionality to logout button-->
-        </div>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!--SIDE NAV-->
-        <div class="sidenav">
-            <button class="dropdown-btn" id="fill">Fill ></button>
-            <div class="dropdown-container">
-                <a href="#" onclick="load_tab('fill_survey')">Surveys</a>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.css" >
+
+    <title>Surv-YAY Homepage</title>
+  </head>
+  <body>
+      <!--HEADER-->
+      <nav class="navbar navbar-expand-lg navbar bg static-top">
+          <a class="navbar-brand" href="index">
+              <img src="images/SurvyaySmallLogo.jpg" alt="" style="float:left; width:30%">
+          </a>
+          <h2>Welcome, User!</h2>
+          <button type="button" class="btn btn-primary" onclick=logout() style="background-color:#9DCE5B">Logout</button>
+      </nav>
+
+      <div class="container-fluid">
+            <div class="row">
+                <!--SIDE NAVBAR-->
+                <div class="col-sm-3 col-md-2 dropdown" style="padding-right: 0">
+                    <ul class="dropdown-menu flex-column">
+                        <!--TODO: Add appropriate Home link-->
+
+                        <button class="dropdown-item"> Fill</button>
+                        <div class="dropdown-container">
+                                <li><a href="#" onclick="load_tab('fill_survey')">Surveys</a></li>
+                        </div>
+
+                        <button class="dropdown-item"> View</button>
+                        <div class="dropdown-container">
+                                <li><a href="#" onclick="load_tab('view_records')">Records</a></li>
+                                <li><a href="#" onclick="load_tab('view_surveys')">Surveys</a></li>
+                        </div>
+
+                        <button class="dropdown-item"> Create</button>
+                        <div class="dropdown-container">
+                                <li><a href="#" onclick="load_tab('create_question')">Questions</a></li>
+                                <li><a href="#" onclick="load_tab('create_survey')">Surveys</a></li>
+                        </div>
+
+                        <button onclick="load_tab('admin_space')" class="dropdown-item"> Settings</button>
+                    </ul>
+                </div>
+                <!--SIDE NAVBAR-->
+
+                <!--MAIN BODY-->
+                <div class="col-sm-3 col-md-9 main" id="mainBody">
+                    <h1 class="page-header" style="padding-left: 2%;padding-top:2%">Make a site selection to begin!</h1>
+                </div>
+                <!--MAIN BODY-->
             </div>
+      </div>
 
-            <button class="dropdown-btn" id="view">View ></button>
-            <div class="dropdown-container">
-                <a href="#" onclick="load_tab('view_records')">Records</a>
-                <a href="#" onclick="load_tab('view_surveys')">Surveys</a>
-            </div>
 
-            <button class="dropdown-btn" id="create">Create ></button>
-            <div class="dropdown-container">
-                <a href="#" onclick="load_tab('create_question')">Questions</a>
-                <a href="#" onclick="load_tab('create_survey')">Surveys</a>
-            </div>
-        </div>
+    
+  </body>
 
-        <!--CONTAINER WHERE ALL THE SEPARATE PAGES ARE GOING TO GO-->
-        <!--<div  id="content" style="height:auto; width:auto ">-->
-        <div id="index">
-            <h5>Welcome, make a site selection to begin!</h5>
-
-        </div>
-
-    </body>
-
-    <!--FOOTER-->
-    <footer>
-        Help | About | User Account
-    </footer>
+  <!-- Footer Help | About | User Account-->
+  <footer class="page-footer font-small " style="padding-right: 5%; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+    <div class="footer-copyright text-right py-3" >
+      <a href="#" onclick="load_tab('help')" style="color: black"> Help</a>
+      <a> | </a>
+      <a href="#" onclick="load_tab('about')" style="color: black"> About</a>
+      <a> | </a>
+      <a href="#" onclick="load_tab('contact')" style="color: black"> Contact Us</a>
+    </div>
+  </footer>
+  <!-- Footer -->
 </html>
 
 <script>
-    /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
-    var dropdown = document.getElementsByClassName("dropdown-btn");
-    var i;
+        /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+        var dropdown = document.getElementsByClassName("dropdown-item");
+        var i;
+    
+        for (i = 0; i < dropdown.length; i++) {
+            dropdown[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var dropdownContent = this.nextElementSibling;
+                if (dropdownContent.style.display === "block") {
+                    dropdownContent.style.display = "none";
+                } else {
+                    dropdownContent.style.display = "block";
+                }
+            });
+        }
 
-    for (i = 0; i < dropdown.length; i++) {
-        dropdown[i].addEventListener("click", function () {
-            this.classList.toggle("active");
-            var dropdownContent = this.nextElementSibling;
-            if (dropdownContent.style.display === "block") {
-                dropdownContent.style.display = "none";
-            } else {
-                dropdownContent.style.display = "block";
-            }
-        });
-    }
+        function load_tab(tab) {
+            var dest = 'views/' + tab
+            console.log(dest);
+            document.getElementById("mainBody").innerHTML = '<object type="text/html" data=' + tab + ' width=100% height=100%></object>';
+        }
 
-    function load_tab(tab) {
-        var dest = 'views/' + tab
-        console.log(dest);
-        document.getElementById("index").innerHTML = '<object type="text/html" data=' + tab + ' width=100% height=100%></object>';
-    }
-
-    function logout(){
-        window.location = '/';
-    }
+        function logout(){
+            window.location = '/';
+        }
 </script>
