minor placement change on sidenav

--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
       <div class="container-fluid">
             <div class="row">
                 <!--SIDE NAVBAR-->
-                <div class="col-sm-3 col-md-2 dropdown" style="padding-right: 0">
+                <div class="col-sm-3 col-md-2 dropdown" style="padding-right: 0; padding-left: 0">
                     <ul class="dropdown-menu flex-column">
                         <!--TODO: Add appropriate Home link-->
 
