--- a/views/fill_survey.html
+++ b/views/fill_survey.html
@@ -92,7 +92,7 @@
                                 single_survey_data += '</div>';
                             }
                         } else {
-                            single_survey_data += '<input type=text class=form-control></input>'; // Give a textbox
+                            single_survey_data += '<input type=text class=form-control style=width:20%></input>'; // Give a textbox
                         }
                         single_survey_data += '</div>';
                     });
