--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -90,6 +90,30 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5rem;
 }
 
+h1 {
+  color: black;
+  font-size: 24pt;
+  font-weight: normal;
+  font-style: normal;
+  border-bottom: 1px solid black;
+}
+
+.header h2 {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: black;
+  position: relative;
+  font-size: 20pt;
+  font-weight: normal;
+  font-style: normal;
+}
+
+h3 {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16pt;
+  font-weight: normal;
+  font-style: normal;
+}
+
 p {
   margin-top: 0;
   margin-bottom: 1rem;
