--- a/views/index.html
+++ b/views/index.html
@@ -51,7 +51,8 @@
 
                 <!--MAIN BODY-->
                 <div class="col-sm-3 col-md-9 main" id="mainBody">
-                    <h1 class="page-header" style="padding-left: 2%;padding-top:2%">Make a site selection to begin!</h1>
+                    <h1 class="page-header" style="2%;padding-top:2%">Home</h1>
+                    <p >Welcome! Make a site selection to begin!</p>
                 </div>
                 <!--MAIN BODY-->
             </div>
