--- a/views/index.html
+++ b/views/index.html
@@ -1,130 +1,104 @@
-﻿<!DOCTYPE html>
-<html lang="en" style="background-color: #DFE4E8;">
-<head>
-    <link rel="stylesheet" href="css/gunks.css">
-    <title>Surv-YAY Homepage</title>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-</head>
-<body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-        <div class="container" id="head_space">
-            <a class="navbar-brand" href="#">
-                <img src="images/SurvyaySmall Logo.jpg" alt="SurvYay" class="img-responsive">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#" onclick="window.location = '/';">
-                            Log Out
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <!--<li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="list-group">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.css" >
 
-        <a href="#" class="list-group-item active"><span>Home</span></a>
-        <a href="#" onclick="load_tab('fill_survey')" class="list-group-item"><span>Fill</span></a>
-        <a href="#" class="list-group-item"><span>View ></span></a>
-        <a href="#" onclick="load_tab('view_records')" class="list-group-item click"><span>&ensp;&ensp;Records</span></a>
-        <a href="#" onclick="load_tab('view_surveys')" class="list-group-item click"><span>&ensp;&ensp;Surveys</span></a>
-        <a href="#" class="list-group-item"><span>Create ></span></a>
-        <a href="#" onclick="load_tab('create_survey')" class="list-group-item click"><span>&ensp;&ensp;Surveys</span></a>
-        <a href="#" onclick="load_tab('create_question')" class="list-group-item click"><span>&ensp;&ensp;Questions</span></a>
-        <a href="#" onclick="load_tab('admin_space')" class="list-group-item"><span>Settings</span></a>
-    </div>
-    <main class="page-content">
-        <div class="container-fluid" style="background-color: #D7DEF4; height:1000px">
+    <title>Surv-YAY Homepage</title>
+  </head>
+  <body>
+      <!--HEADER-->
+      <nav class="navbar navbar-expand-lg navbar bg static-top">
+          <a class="navbar-brand" href="index">
+              <img src="images/SurvyaySmallLogo.jpg" alt="" style="float:left; width:30%">
+          </a>
+          <h2>Welcome, User!</h2>
+          <button type="button" class="btn btn-primary" onclick=logout() style="background-color:#9DCE5B">Logout</button>
+      </nav>
+
+      <div class="container-fluid">
             <div class="row">
-                <div class="form-group col-md-12"  id="display" style="height:906px">
-                    <h1>Home</h1>
-                    <p>Welcome! Make a site selection to begin!</p>
+                <!--SIDE NAVBAR-->
+                <div class="col-sm-3 col-md-2 dropdown" style="padding-right: 0; padding-left: 0">
+                    <ul class="dropdown-menu flex-column">
+                        <!--TODO: Add appropriate Home link-->
 
+                        <button class="dropdown-item"> Fill</button>
+                        <div class="dropdown-container">
+                                <li><a href="#" onclick="load_tab('fill_survey')">Surveys</a></li>
+                        </div>
+
+                        <button class="dropdown-item"> View</button>
+                        <div class="dropdown-container">
+                                <li><a href="#" onclick="load_tab('view_records')">Records</a></li>
+                                <li><a href="#" onclick="load_tab('view_surveys')">Surveys</a></li>
+                        </div>
+
+                        <button class="dropdown-item"> Create</button>
+                        <div class="dropdown-container">
+                                <li><a href="#" onclick="load_tab('create_question')">Questions</a></li>
+                                <li><a href="#" onclick="load_tab('create_survey')">Surveys</a></li>
+                        </div>
+
+                        <button onclick="load_tab('admin_space')" class="dropdown-item"> Settings</button>
+                    </ul>
                 </div>
+                <!--SIDE NAVBAR-->
+
+                <!--MAIN BODY-->
+                <div class="col-sm-3 col-md-9 main" id="mainBody">
+                    <h1 class="page-header" style="2%;padding-top:2%">Home</h1>
+                    <p >Welcome! Make a site selection to begin!</p>
+                </div>
+                <!--MAIN BODY-->
             </div>
-        </div>
-    </main>
+      </div>
 
 
+    
+  </body>
 
-</body>
+  <!-- Footer Help | About | User Account-->
+  <footer class="page-footer font-small " style="padding-right: 5%; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+    <div class="footer-copyright text-right py-3" >
+      <a href="#" onclick="load_tab('help')" style="color: black"> Help</a>
+      <a> | </a>
+      <a href="#" onclick="load_tab('about')" style="color: black"> About</a>
+      <a> | </a>
+      <a href="#" onclick="load_tab('contact')" style="color: black"> Contact Us</a>
+    </div>
+  </footer>
+  <!-- Footer -->
 </html>
 
 <script>
-    var gathered_role = sessionStorage.getItem("favoriteMovie");
-    //var gathered_role = '4'
-    gathered_role = parseInt(gathered_role);
-    console.log(gathered_role);
-
-    $(document).ready(function () {
-        $('.list-group-item').click(function (e) {
-            e.preventDefault();
-            $('.list-group-item').removeClass('active');
-            $(this).addClass('active');
-        });
-    });
-
-    function load_tab(tab) {
-        var dest = 'views/' + tab
-        console.log(dest);
-        if ( gathered_role >= 7) {
-            open_tab(tab)
-        } else if (gathered_role >= 5) {
-            if (tab != 'admin_space') { open_tab(tab) }
-        } else if (gathered_role >= 4) {
-            if ((tab != 'admin_space' &&tab != 'create_question') ) { open_tab(tab) }
-        } else if (gathered_role >= 3) {
-            if ((tab != 'admin_space' &&tab != 'create_question' &&tab != 'create_survey')) { open_tab(tab) }
-        } else if (gathered_role >= 2) {
-            if ((tab != 'admin_space' &&tab != 'create_question' &&tab != 'create_survey' &&tab != 'fill_survey')) { open_tab(tab) }
-        }else {
-            console.log('No can do.') 
+        /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+        var dropdown = document.getElementsByClassName("dropdown-item");
+        var i;
+    
+        for (i = 0; i < dropdown.length; i++) {
+            dropdown[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var dropdownContent = this.nextElementSibling;
+                if (dropdownContent.style.display === "block") {
+                    dropdownContent.style.display = "none";
+                } else {
+                    dropdownContent.style.display = "block";
+                }
+            });
         }
-    }
 
-    function open_tab(allowed_tab) {
-        document.getElementById("display").innerHTML = '<object type="text/html" data=' + allowed_tab + ' width=100% height=100%></object>';
-    }
+        function load_tab(tab) {
+            var dest = 'views/' + tab
+            console.log(dest);
+            document.getElementById("mainBody").innerHTML = '<object type="text/html" data=' + tab + ' width=100% height=100%></object>';
+        }
+
+        function logout(){
+            window.location = '/';
+        }
 </script>
-
-<style>
-     .list-group {
-     display:inline;
-     margin:auto;
-     float:left;
-     padding-top:0px;
-     background-color: antiquewhite;
-    }
-    .lead {
-     
-     margin:auto;
-     left:0;
-     right:0;
-     padding-top:10%;
-     background-color: #DFE4E8;
-     color: black
-    }
-    .list-group-item {
-        background-color: #9DCE5B;
-        color: black;
-        width: 150px;
-        height: 45px;
-    }
-    .click{
-        background-color: rgb(172, 199, 136);
-    }
-</style>
