--- a/views/create_survey.html
+++ b/views/create_survey.html
@@ -1,31 +1,27 @@
-﻿﻿<html lang = "en">
+<html lang = "en">
 
     <head>
         <meta charset = "utf-8">
         <meta name = "viewport" content = "width=device-width, initial-scale = 1">
-        <link rel = "stylesheet" href = "css/gunks.css"/> 
+        <link rel = "stylesheet" href = "css/bootstrap.css"/> 
     </head>
-    <body id="create_survey">
-        <div>
+    <body id="create_survey" onload="getQuestions()" style="background-color: #DFE4E8; width: 100%">
+        <div class="container-fluid" id="primary_question">
             <h1>Create a survey</h1>
-        </div>
-
-        <div class="file" id = "tableForm">
             <h2>Survey title:</h2>
+
             <input type = "text" id = "survTitle"><br><br>
             <h2>Choose survey questions:</h2>
-            <table id = "columnTable"> <!-- table for column headers -->
-                <col width="20px" />
-                <col width="500px" />
-                <tr style="background-color: #ECE3E3">
+
+            <!--TABLE OF QUESTIONS-->
+            <table class="table table-striped" id="questionTable">
+                <tr>
                     <th>Question ID</th>
                     <th>Question</th>
                 </tr>
             </table>
-            <table id = "questionTable"> <!-- table of questions from api -->
-                <col width="20px" />
-                <col width="500px" />
-            </table>
+            <!--TABLE OF QUESTIONS-->
+
             <h2>Survey description:</h2>
             <textarea rows = "4" cols = "50" id = "survD"></textarea><br><br>
             <button type="button" id="submit" > Submit > </button>
@@ -33,79 +29,69 @@
     </body>
 </html>
 
+<script src="https://code.jquery.com/jquery.min.js"></script>
+<script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.min.js"></script>
 <script>
-var chosen = [];
-var moreCh = [];
-var check = [];
-getQuestions();
-document.getElementById("submit").addEventListener("click", function(){
-    submitQuestions(document.getElementById("survTitle").value,
-                    document.getElementById("survD").value);}, false);
+    var chosen = [];
+    var moreCh = [];
+    var check = [];
+    document.getElementById("submit").addEventListener("click", function(){
+        submitQuestions(document.getElementById("survTitle").value,
+        document.getElementById("survD").value);}, false);
+                    
+    function getQuestions(){
+        var url = 'http://18.219.137.210:3000/api/questions';
+        $(document).ready(function() {
+            $.getJSON(url, function (data) { // fetches the json from url, puts in data as a result
+                var question_data = '';
+                $.each(data, function(key,value){
+                    var checkID = JSON.parse(value.QuesID);
+                    question_data += '<tr>';
+                    question_data += '<td>'+value.QuesID+'</td>';
+                    question_data += '<td><input type=checkbox id=tncheckbox'+checkID+'</input> '+value.Ques_text+'</td>';
+                    question_data += '</tr>';
+                });
 
-function getQuestions(check){
-    // getting questions to put into table
-    fetch('http://18.219.137.210:3000/api/questions')
-    .then((res_1) => { return res_1.json() })
-    .then((data_1) => {
-        let result = [];
-        data_1.forEach((question) => {
-            const { QuesID, Ques_text} = question
-            result = [
-            `QuesID: ${QuesID}
-                Question Text : ${Ques_text} ` ];  
-            chosen.unshift(QuesID);
-            makeTable(result);
-        });
-    })
-}
-
-function makeTable(data){
-    // creating table with check boxes
-    var ques = document.getElementById("questionTable");
-    var newRow = ques.insertRow(0);
-    for(var i = 0; i < data.length; i++){
-        var newCell = newRow.insertCell(i);
-        newCell.innerHTML = data[i];
-        var checkbox = document.createElement("input");
-        checkbox.type = 'checkbox';
-        checkbox.id = 'tncheckbox' + i;
-        newCell.appendChild(checkbox);
+                $('#questionTable').append(question_data); // adds row of data to table
+            });
+        })
     }
-}
-
-function submitQuestions(title, des){
-    console.log(title);
-    console.log(des);
-    var chkd = document.getElementById("questionTable");
-    var chkdb = chkd.getElementsByTagName('tncheckbox');
-    // checking which check boxes are checked
-    for(var i = 0; i < chkdb.length; i++){
-        if(chkdb[i].checked){
-            check.push(chkdb[i]);
+    
+    function submitQuestions(title, des){
+        console.log(title);
+        console.log(des);
+        var chkd = document.getElementById("questionTable");
+        var chkdb = chkd.getElementsByTagName('tncheckbox');
+        // checking which check boxes are checked
+        for (var i = 0; i < chkdb.length; i++){
+            if (chkdb[i].checked){
+                check.push(chkdb[i]);
+            }
         }
-    }
-    console.log(check);
-
-    // posting the survey title and description 
-    fetch('http://18.219.137.210:3000/api/survey/add', {
+        console.log(check);
+        
+        // posting the survey title and description 
+        fetch('http://18.219.137.210:3000/api/survey/add', {
             method: 'POST',
             headers: {'Content-Type': 'application/json'},
             body: JSON.stringify({SurvTitle:title,
                                   SurvDescription:des})
-    }).then((res) => res.json())
-    .then((data) =>  postQ(data))
-    .catch((err)=>console.log(err))
-}
+            }).then((res) => res.json())
+            .then((data) =>  postQ(data))
+            .catch((err)=>console.log(err))
+    }
 
-function postQ(dat){
-    // posting the chosen questions to the new survey 
-    fetch('http://18.219.137.210:3000/api/surveys/add_question', {
+
+    function postQ(dat){
+        // posting the chosen questions to the new survey 
+        fetch('http://18.219.137.210:3000/api/surveys/add_question', {
             method: 'POST',
             headers: {'Content-Type': 'application/json'},
             body: JSON.stringify({SurvID:dat,
                                   QuesID:des})
-    }).then((res) => res.json())
-    .then((data) =>  console.log(data))
-    .catch((err)=>console.log(err))
-}
+        }).then((res) => res.json())
+        .then((data) =>  console.log(data))
+        .catch((err)=>console.log(err))
+    }
 </script>
