--- a/views/view_records.html
+++ b/views/view_records.html
@@ -1,209 +1,110 @@
-﻿<html lang="en">
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="css/gunks.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     </head>
 
-    <body id="view_record" onload="getRecordsURL()" style="background-color: #DFE4E8;">
-        <div>
-            <h1 id="pageHeader">View Records</h1>
-            <h3>Select the record you wish to view.</h3>
+	<body id="view_record" onload="getRecordsURL()" style="background-color: #DFE4E8; width: 100%">
+		<div class="container-fluid" id="primary_records">
+			<h1 id="pageHeader">View Records</h1>
+			<h3>Select the record you wish to view.</h3>
+
+			<div id="search" style="margin-left: 80%">
+					<input type="text" value="Filter By" id="filterBy">
+					<button type="button" id="search">Search</button><br>
+			</div>
+
+			<table class="table table-striped" id="viewSurveyTable">
+				<tr>
+					<th>Interviewer</th>
+					<th>Filled</th>
+					<th>Interview Title</th>
+					<th>Survey Title</th>
+				</tr>
+			</table>
+        </div>
+        
+        <div class="container-fluid" id="secondary_records">
+            <h1 id="titleOfInterview"></h1>
+            <!--FORM OF SINGLE SURVEY-->
+            <form id="recordForm"></form>
+            <!--FORM OF SINGLE SURVEY-->
         </div>
 
-        <div id="search" style="margin-left: 80%">
-            <input type="text" value="Filter By" id="filterBy">
-            <button type="button" id="search">Search</button><br>
-        </div>
-
-        <div class="file" id="tableForm">
-            <!--<h3 style="text-align: center">Interviewer | Filled | Interview Title | Survey Title </h3>-->
-            <table id="columnTable"> <!--Table for the column headers-->
-                <col width="125px" />
-                <col width="350px" />
-                <col width="375px" />
-                <col width="500px" />
-                <tr style="background-color: #ECE3E3">
-                    <th>Interviewer</th>
-                    <th>Filled</th>
-                    <th>Interview Title</th>
-                    <th>Survey Title</th>
-                </tr>
-            </table>
-            <table id="surveyTable"> <!--Table for data from api-->
-                <col width="125px" />
-                <col width="350px" />
-                <col width="375px" />
-                <col width="500px" />
-            </table>
-            <div id="singSurv"></div>
-        </div>
-
-
-
-        <script type="text/javascript">
+	<script src="https://code.jquery.com/jquery.min.js"></script>
+	<script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.min.js"></script>
+	<script type="text/javascript">
             var heyo = []; //Thanks Molly for your great code!
             var everythingElse = [];
             var surveyTitle = "";
-
-            document.getElementById("surveyTable").addEventListener("click", function () {
+            /*document.getElementById("surveyTable").addEventListener("click", function () {
                 highlight_row();
             }, false);
-
             document.getElementById("surveyTable").addEventListener("dblclick", function () {
                 getRecordID();
-            }, false);
+            }, false);*/
 
-            function getRecordsURL() { // This is the function that gets the survey info
-                var url = 'http://18.219.137.210:3000/api/interviews';
-                fetch(url) // Connection to api
-                    .then(surveyList => surveyList.json()) // Transform data into json
-                    .then(function (data) {
-                        let result = [];
-                        data.forEach((interview) => {
-                            const {
-                                SurvID,
-                                SurvTitle,
-                                SurvCreator,
-                                SurvCreated,
-                                SurvDescription,
-                                InteID,
-                                InteTitle,
-                                Filled_by,
-                                Date_filled
-                            } = interview
-                            result = [
-                                `${Filled_by}`,
-                                `${Date_filled}`,
-                                `${InteTitle}`,
-                                `${SurvTitle}`
-                            ];
-                            let idk = JSON.stringify(result);
-                            heyo.unshift(SurvID);
-                            makeTableHTML(result);
-                        });
-                    })
-            }
+        function getRecordsURL() { // This is the function that gets the survey info
+            $('secondary_records').hide();
+			var url = 'http://18.219.137.210:3000/api/interviews';
+            $(document).ready(function() {
+                $.getJSON(url, function (data) { // fetches the json from url, puts in data as a result
+                    var record_data = '';
+                    $.each(data, function(key,value){
+						var rowID = JSON.parse(value.SurvID);
+                        record_data += '<tr id='+rowID+'>';
+						record_data += '<td>'+value.Filled_by+'</td>';
+                        record_data += '<td>'+value.Date_filled+'</td>';
+                        record_data += '<td>'+value.InteTitle+'</td>';
+                        record_data += '<td>'+value.SurvTitle+'</td>';
+                        record_data += '</tr>';
+                    });
+                    
+                    $('#viewSurveyTable').append(record_data); // adds row of data to table
 
-        function makeTableHTML(info) {
-            var survTable = document.getElementById("surveyTable");
-            var newRow = survTable.insertRow(0);
-            for (var i = 0; i < info.length; i++) {
-                var newCell = newRow.insertCell(i);
-                newCell.innerHTML = info[i];
-            }
-        }
-
-        function highlight_row() {
-            var table = document.getElementById('surveyTable');
-            var cells = table.getElementsByTagName('td');
-
-            for (var i = 0; i < cells.length; i++) { // Take each cell
-                var cell = cells[i]; // do something on onclick event for cell
-                cell.onclick = function () { // Get the row id where the cell exists
-                    var rowId = this.parentNode.rowIndex;
-
-                    var rowsNotSelected = table.getElementsByTagName('tr');
-                    for (var row = 0; row < rowsNotSelected.length; row++) {
-                        rowsNotSelected[row].style.backgroundColor = "";
-                        rowsNotSelected[row].classList.remove('selected');
-                    }
-                    var rowSelected = table.getElementsByTagName('tr')[rowId];
-                    rowSelected.style.backgroundColor = "gray";
-                    rowSelected.className += " selected";
-                }
-            }
-        }
-
-        function getRecordID() { //This is where I need to figure out how to pull up a survey
-            var table = document.getElementById('surveyTable');
-            var cells = table.getElementsByTagName('td');
-
-            for (var i = 0; i < cells.length; i++) { // Take each cell
-                var cell = cells[i]; // do something on onclick event for cell
-                cell.onclick = function () { // Get the row id where the cell exists
-                    var rowId = this.parentNode.rowIndex;
-
-                    var rowsNotSelected = table.getElementsByTagName('tr');
-                    for (var row = 0; row < rowsNotSelected.length; row++) {
-                        rowsNotSelected[row].style.backgroundColor = "";
-                        rowsNotSelected[row].classList.remove('selected');
-                    }
-                    var rowSelected = table.getElementsByTagName('tr')[rowId];
-                    var idValue = heyo[rowId]
-                    var url = 'http://18.219.137.210:3000/api/interviews/gather/' + idValue.toString();
-                    pullUpInterview(url);
-                };
-            }
-        }
-
-        function pullUpInterview(InteURL) { //This is where I need to figure out how to pull up a survey
-            fetch(InteURL) // Connection to api
-            .then(singleSurveyList => singleSurveyList.json()) // Transform data into json
-            .then(function (singleSurveyData) {
-                let singleSurveyResult = [];
-                singleSurveyData.forEach((singleSurvey) => {
-                     const {
-                        InteID,
-                        Filled_by,
-                        Date_filled,
-                        SurvID,
-                        InteTitle,
-                        SurvCreated,
-                        SurvCreator,
-                        SurvTitle,
-                        SurvDescription,
-                        QuesID,
-                        Reco_ans,
-                        Note,
-                        Ques_text,
-                        ChoiID,
-                        Choi_text,
-                        Choi_text_id
-                     } = singleSurvey
-                     singleSurveyResult = [
-                        `${InteTitle}`,
-                        `${Filled_by}`,
-                        `${Date_filled}`,
-                        `${Reco_ans}`,
-                        `${Note}`,
-                        `${Ques_text}`,
-                        `${Choi_text}`,
-                        `${Choi_text_id}`
-                     ];
-                    everythingElse.unshift(singleSurveyResult);
-                    surveyTitle = SurvTitle;
+					$(document).on('click', '#viewSurveyTable tr', function(event) {
+                        $("#primary_records").hide(); // Hide the table when you select single survey
+                        var whichSurvey = $(this).closest('tr').attr('id');
+                        console.log(whichSurvey);
+                        getSingleRecord(whichSurvey);
+                    });
                 });
-                formatResults(surveyTitle, everythingElse);
             })
         }
 
-        function formatResults(title, re) { // This will output the questions for a specified survey
-            document.getElementById("view_records").innerHTML = "";
-            var newHeader = document.createElement("H1");
-            newHeader.innerText = title;
-            document.body.appendChild(newHeader);
-            for (var i = 0; i < re.length; i++) {
-                var para = document.createElement("DIV");
-                para.setAttribute("id", i.toString());
-                para.innerText = re[i][0]; // Insert text
-                document.body.appendChild(para); 
-                
-               /*if (re[i][2] == 1){ 
-                    var radioBtn = document.createElement("INPUT");
-                    radioBtn.setAttribute("type", "radio");
-                    document.body.appendChild(radioBtn);
-                } else if (re[i][2] == 2) {
-                    var txtBox = document.createElement("INPUT");
-                    txtBox.setAttribute("type", "text");
-                    document.body.appendChild(txtBox);
-                }*/
-            }
-        }
+		function getSingleRecord(survID) {
+           var n = [];
+           var url = 'http://18.219.137.210:3000/api/interviews/gather/' + survID; // TODO: get individual surveys
+           console.log(url);
+           $(document).ready(function() {
+               $.getJSON(url, function (data) {
+                   var page_title = '';
+                   var single_record_data = '';
+                   page_title += '<h1 class=page-header>'+data[0].InteTitle+'</h1>';
+                   groupedData = data.reduce(function(result, current) { // This groups together the radio buttons under the same Question ID
+                       result[current.QuesID] = result[current.QuesID] || [];
+                       result[current.QuesID].push(current);
+                       return result;}, {});
+                    console.log(groupedData);
 
+                    $.each(groupedData, function(key,value) {
+                        n.push(key); // Make array of the keys in groupedData --> ["1", "8"]
+                        var keyIndex = n.indexOf(key); // "1" --> 0, "8" --> 1
+                        single_record_data += '<div>';
+						single_record_data += '<h3>'+groupedData[n[keyIndex]][0].Ques_text+'</h3>'; // I think we can use index 0 because if there are multiples, they all share the same question...
+                        single_record_data += '<p>'+ groupedData[n[keyIndex]][0].Reco_ans+'</p>'; // Give a textbox
+                        single_record_data += '</div>';
+                    });
+                   $('#titleOfInterview').html(page_title);
+                   $('#recordForm').append(single_record_data); // adds each question and their appropriate type to the form
+                   $('secondary_records').show(); // Display the form*/
+               });
+               
+           });
+        }
     </script>
 </body>
 
